--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,21 @@
     <link rel="stylesheet" href="global.css" />
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
     <link rel="icon" type="image/png" href="favicon.jpeg" />
+    <!-- Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
+    />
 
+    <!-- Material Typography -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@material/typography@11.0.0/dist/mdc.typography.css"
+    />
+
+    <!-- SMUI -->
+    <link rel="stylesheet" href="https://unpkg.com/svelte-material-ui/bare.css" />
     <!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
 	     initialise the router -->
